# egui-material3

./: .gitignore  CHANGELOG.md  CREDITS.md  Cargo.toml  LICENSE  LICENSE-Apache-2.0  README.md  SECURITY.md  TROUBLESHOOT.md  build.rs  cliff.toml  test_api.rs
.cargo/: config.toml
.github/workflows/: rust-release.yml
examples/: card2_window.rs  datatable_window.rs  egui-material.rs  flight_departures_example.rs  main.rs  menu_window.rs  nobel_prizes_example.rs  progress_window.rs  select_window.rs  snackbar_window.rs  svg_icon_demo.rs  topappbar_window.rs  widget_gallery_example.rs
examples/ondemand/: Cargo.toml
examples/ondemand/resources/: material-theme.json
examples/ondemand/src/: main.rs
examples/package/: Cargo.toml
examples/package/resources/: LICENSE-SILOFL1.1  material-theme.json
examples/package/src/: main.rs
examples/stories/: actionsheet_window.rs  badge_window.rs  bottomappbar_window.rs  breadcrumbs_window.rs  button_window.rs  card2_window.rs  carousel_window.rs  checkbox_window.rs  chips_window.rs  dashcounter_window.rs  datatable_window.rs  dialog_window.rs  drawer_window.rs  fab_window.rs  iconbutton_window.rs  imagelist_window.rs  layoutgrid_window.rs  list_window.rs  main.rs  material_symbol_icons.rs  menu_window.rs  notification_window.rs  progress_window.rs  radio_window.rs  select_window.rs  slider_window.rs  snackbar_window.rs  spreadsheet_window.rs  svgemoji_window.rs  switch_window.rs  symbol_window.rs  tabs_window.rs  textfield_window.rs  timeline_window.rs  toolbar_window.rs  tooltip_window.rs  topappbar_window.rs  treeview_window.rs
resources/: departments.csv  departments2.csv  material-theme1.json  material-theme3.json  material-theme4.json  material-theme5.json  material-theme6.json  material-theme7.json  sample_products.csv
src/: actionsheet.rs  badge.rs  bottomappbar.rs  breadcrumbs.rs  button.rs  button_window.rs  card.rs  card2.rs  card2_window.rs  card_window.rs  carousel.rs  checkbox.rs  checkbox_window.rs  chips.rs  chips_window.rs  dashcounter.rs  datatable.rs  datatable_window.rs  dialog.rs  dialog_window.rs  divider.rs  divider_window.rs  drawer.rs  drawer_window.rs  egui_async_std.rs  elevation.rs  elevation_window.rs  fab.rs  fab_window.rs  field.rs  field_window.rs  focus.rs  focus_window.rs  icon.rs  iconbutton.rs  iconbutton_window.rs  icons.rs  image_utils.rs  imagelist.rs  imagelist_window.rs  (+45 more)
src/spreadsheet/: README.md  draw.rs  mod.rs
src/spreadsheet/draw/: state.rs
