[package]
name = "egui-material3"
version = "0.0.5"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Woojae Park <nikescar@gmail.com>"]
description = "Material Design 3 components for egui with comprehensive theming support"
homepage = "https://github.com/nikescar/egui-material3"
repository = "https://github.com/nikescar/egui-material3"
documentation = "https://docs.rs/egui-material3"
readme = "README.md"
keywords = ["egui", "material-design", "gui", "ui", "components"]
categories = ["gui", "graphics", "visualization"]
exclude = ["resources/*.ttf"]

[features]
default = []
ondemand = ["dep:ureq"]

[dependencies]
egui = "0.32.3"
eframe = { version = "0.32.3", default-features = true }
egui_extras = { version = "0.32.3", default-features = false, features = ["image", "svg", "svg_text"] }

# egui = { git = "https://github.com/emilk/egui", default-features = false, features = ["default_fonts"] }
# eframe = { git = "https://github.com/emilk/egui", default-features = true }
# egui_extras = { git = "https://github.com/emilk/egui", default-features = false, features = ["image", "svg", "svg_text"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
resvg = "0.42"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
lazy_static = "1.4"
ureq = { version = "2.9", features = ["json"], optional = true }
base64 = "0.22"
hex = "0.4"
glob = "0.3"

[dev-dependencies]
ureq = { version = "2.9", features = ["json"] }
egui-file-dialog = "0.11.0"
webbrowser = { version = "1.0.5", default-features = false }

[[example]]
name = "nobel_prizes_example"
path = "examples/nobel_prizes_example.rs"

[[example]]
name = "widget_gallery_example"
path = "examples/widget_gallery_example.rs"

[[example]]
name = "stories"
path = "examples/stories/main.rs"

# example for examples/package/Cargo.toml
#[[example]]
#name = "package"
#path = "examples/package/src/main.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
doc = true

# [[example]]
# name = "package"
# path = "examples/package/src/main.rs"
# doc = false

# [[example]]
# name = "ondemand"
# path = "examples/ondemand/src/main.rs"
# doc = false

[build-dependencies]
ureq = { version = "2.9", features = ["json"] }
serde_json = "1.0"

# $ cargo run --example nobel_prizes_example
# $ cargo run --example widget_gallery_example
# $ cargo doc --no-deps --open
# $ cargo doc --lib --no-deps
# $ cargo publish
# $ cargo publish --dry-run