[workspace]
exclude = ["reference/**"]

[package]
name = "egui-material3"
version = "0.0.7"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Woojae Park <nikescar@gmail.com>"]
description = "Material Design 3 components for egui with comprehensive theming support"
homepage = "https://github.com/nikescar/egui-material3"
repository = "https://github.com/nikescar/egui-material3"
documentation = "https://docs.rs/egui-material3"
readme = "README.md"
keywords = ["egui", "material-design", "gui", "ui", "components"]
categories = ["gui", "graphics", "visualization"]
exclude = ["resources/*.ttf"]

[features]
default = []
ondemand = ["dep:ureq"]
spreadsheet = ["dep:duckdb", "dep:egui_extras", "dep:egui-async", "dep:tokio", "dep:csv", "dep:calamine"]
svg_emoji = []

[dependencies]
egui = "0.33"
# egui = { git = "https://github.com/emilk/egui", default-features = false, features = ["default_fonts"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
resvg = "0.45"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
tiny-skia = "0.11"
lazy_static = "1.5"
base64 = "0.22"
hex = "0.4"
once_cell = "1.21"

ureq = { version = "2.12", features = ["json"], optional = true } # for ondemand feature
# duckdb = { version = "1.4.4", optional = true, features = ["parquet", "json", "bundled"] } # for spreadsheet feature - requires system libduckdb
# duckdb = { version = "=1.4.4", features = ["parquet", "json", "bundled"], optional = true }
duckdb = { version = "=1.4.4", features = ["bundled"], optional = true  }
egui_extras = { version = "0.33", default-features = false, features = ["serde"], optional = true }
egui-async = { version = "0.3", optional = true } # for spreadsheet feature
tokio = { version = "1.49", features = ["rt", "rt-multi-thread"], optional = true } # for spreadsheet feature
csv = { version = "1.4", optional = true } # for spreadsheet feature
calamine = { version = "0.26", optional = true } # for spreadsheet feature (xls/xlsx)
# arrow = { version = "53.3", optional = true } # for spreadsheet feature - temporarily disabled due to version conflicts

[dev-dependencies]
egui_extras = { version = "0.33", default-features = false, features = ["image", "svg", "svg_text"] }
# egui_extras = { git = "https://github.com/emilk/egui", default-features = false, features = ["image", "svg", "svg_text"] }

ureq = { version = "2.12", features = ["json"] }
egui-file-dialog = "0.12"
webbrowser = { version = "1.1.0", default-features = false }
glob = "0.3"
egui-async = "0.3"
tokio = { version = "1.49", features = ["rt", "rt-multi-thread"] }

# Android specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "android-native-activity"] }

# Linux-specific dependencies for proper windowing support
[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.33", features = ["default_fonts", "glow", "x11", "wayland"] }

# Wasm specific dependencies
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
# eframe = { version = "0.32.3", features = ["default_fonts", "glow", "web_screen_reader"] }

[[example]]
name = "nobel_prizes_example"
path = "examples/nobel_prizes_example.rs"

[[example]]
name = "widget_gallery_example"
path = "examples/widget_gallery_example.rs"

[[example]]
name = "stories"
path = "examples/stories/main.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
doc = true

[build-dependencies]
ureq = { version = "2.12", features = ["json"] }
serde_json = "1.0"
once_cell = "1.21"

# $ cargo run --example nobel_prizes_example
# $ cargo run --example widget_gallery_example
# $ cargo doc --no-deps --open
# $ cargo doc --lib --no-deps
# $ cargo publish
# $ cargo publish --dry-run