# [workspace]  #- commented out when used as path dependency in dure project
# exclude = ["reference/**"]

[package]
name = "egui-material3"
version = "0.0.10"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Woojae Park <nikescar@gmail.com>"]
description = "Material Design 3 components for egui with comprehensive theming support"
homepage = "https://github.com/nikescar/egui-material3"
repository = "https://github.com/nikescar/egui-material3"
documentation = "https://docs.rs/egui-material3"
readme = "README.md"
keywords = ["egui", "material-design", "gui", "ui", "components"]
categories = ["gui", "graphics", "visualization"]
exclude = [
    "resources/*.ttf",
    "resources/noto/**",
    "resources/twemoji/**",
    "resources/solar/**"
]

[features]
default = []
ondemand = ["dep:ureq"]
spreadsheet = ["dep:diesel", "dep:egui_extras", "dep:csv", "dep:calamine", "dep:futures", "dep:async-std", "dep:wasm-bindgen-futures", "dep:rusqlite"]
svg_solar = []
svg_noto = []
svg_twemoji = []
svg_emoji = ["svg_solar", "svg_noto", "svg_twemoji"]

[dependencies]
egui = "0.33"
# egui = { git = "https://github.com/emilk/egui", default-features = false, features = ["default_fonts"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Note: resvg is patched to use a custom fork in .cargo/config.toml for local development
resvg = "0.47"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
tiny-skia = "0.12"
lazy_static = "1.5"
base64 = "0.22"
hex = "0.4"
once_cell = "1.21"
dark-light = "2.0"

# For spreadsheet feature - SQLite (desktop/native)
[target.'cfg(not(target_family = "wasm"))'.dependencies]
rusqlite = { version = "0.38", default-features = false, features = ["bundled"], optional = true }
libsqlite3-hotbundle = { version = "1.510300", optional = true, path = "reference/libsqlite3-hotbundle" }
async-std = { version = "1.13", features = ["attributes"], optional = true } # for spreadsheet feature
# diesel = { version = "2.3", default-features = false, features = ["sqlite"], optional = true }

ureq = { version = "2.12", features = ["json"], optional = true } # for ondemand feature
egui_extras = { version = "0.33", default-features = false, features = ["serde"], optional = true }
csv = { version = "1.4", optional = true } # for spreadsheet feature
calamine = { version = "0.26", optional = true } # for spreadsheet feature (xls/xlsx)
futures = { version = "0.3", optional = true } # for spreadsheet feature (async Mutex)
# async-std for native spreadsheet feature - moved to target-specific section below

[dev-dependencies]
egui_extras = { version = "0.33", default-features = false, features = ["image", "svg", "svg_text"] }
# egui_extras = { git = "https://github.com/emilk/egui", default-features = false, features = ["image", "svg", "svg_text"] }

ureq = { version = "2.12", features = ["json"] }
egui-file-dialog = "0.12"
webbrowser = { version = "1.2.0", default-features = false }
glob = "0.3"
async-std = { version = "1.13", features = ["attributes"] }

# Android specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "android-native-activity"] }

# Linux/BSD-specific dependencies for proper windowing support
[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
eframe = { version = "0.33", features = ["default_fonts", "glow", "x11", "wayland"] }

# Wasm specific dependencies
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
# eframe = { version = "0.32.3", features = ["default_fonts", "glow", "web_screen_reader"] }
diesel = { version = "2.3", default-features = false, features = ["sqlite", "returning_clauses_for_sqlite_3_35"], optional = true }
sqlite-wasm-vfs = { version = "0.2.0", optional = true }
sqlite-wasm-rs = { version = "0.5.2", optional = true }
egui_extras = { version = "0.33", default-features = false, features = ["serde"], optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
csv = { version = "1.4", optional = true }
calamine = { version = "0.26", optional = true }
futures = { version = "0.3", optional = true }

[[example]]
name = "nobel_prizes_example"
path = "examples/nobel_prizes_example.rs"

[[example]]
name = "widget_gallery_example"
path = "examples/widget_gallery_example.rs"

[[example]]
name = "stories"
path = "examples/stories/main.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
doc = true

[build-dependencies]
ureq = { version = "2.12", features = ["json"] }
serde_json = "1.0"
once_cell = "1.21"

[profile.dev]
# Fast incremental builds for development
opt-level = 0
debug = 2
lto = false
incremental = true
codegen-units = 256

[profile.release]
lto = true # "fat"
codegen-units = 1
opt-level = "z"
debug = 0
strip = "symbols"
panic = "abort"

# Note: The resvg/usvg patches are configured in .cargo/config.toml for local development.
# This allows the package to be published to crates.io without git dependencies.

# $ cargo run --example nobel_prizes_example
# $ cargo run --example widget_gallery_example
# $ cargo doc --no-deps --open
# $ cargo doc --lib --no-deps
# $ cargo publish
# $ cargo publish --dry-run
